:construction: finalisation code